--- a/frontend/src/i18n/locales/de-DE.json
+++ b/frontend/src/i18n/locales/de-DE.json
@@ -3,6 +3,116 @@
     "subtitle": "Die angeforderte Seite existiert nicht.",
     "title": "404 - Seite nicht gefunden"
   },
+  "AI": {
+    "Subtitle": "Mach einfach ein Foto oder suche nach der Pflanze.",
+    "Title": "Pflanzen KI"
+  },
+  "Account": {
+    "Account": "Account",
+    "AccountDescription": "Hier kannst du deine Accountinformationen ändern.",
+    "CurrentPassword": "Aktuelles Passwort",
+    "FistName": "Vorname",
+    "NewPassword": "Neues Passwort",
+    "Password": "Passwort",
+    "PasswordDescription": "Hier kannst du dein Passwort ändern.",
+    "SaveChanges": "Änderung speichern",
+    "SavePassword": "Passwort speichern",
+    "SurName": "Nachname",
+    "Username": "Benutzername"
+  },
+  "Camera": {
+    "Capture": "Aufnehmen",
+    "CapturePhoto": "Foto aufnehmen",
+    "CapturePhotoDescription": "Mach ein Foto von deiner Pflanze um sie mit unser KI zu erkennen.",
+    "ErrorCamera": " Kamera funktioniert nicht. Bitte prüfe die Kameraeinstellungen",
+    "ErrorMaxSize": "Ein oder mehrer Bilder sind zu groß. Maximale Bilder größe",
+    "ErrorResponse": "Upload fehlgeschlagen oder ungültige Antwort.",
+    "Exit": "Beenden",
+    "NoImage": "Keine Bilder zum Hochladen.",
+    "SelectImages": "Bilder auswählen",
+    "SelectedImages": "Ausgewählte Fotos",
+    "StartCamera": "Kamera öffnen",
+    "Upload": "Hochladen",
+    "UploadDone": "Hochladen erfolgreich beendet",
+    "UploadError": "Hochladen fehlgeschlagen",
+    "UploadFinished": "Erfolgreich hochgeladen",
+    "Uploading": "Bild hochladen...",
+    "errorAccess": "Zugriff auf Kamera verweigert oder nicht verfügbar.",
+    "errorCanvas": "Kamera oder Canvas nicht verfügbar.",
+    "errorCanvasContext": "Canvas-Kontext konnte nicht erstellt werden.",
+    "isUpload": "Hochladen..."
+  },
+  "Group": {
+    "Rooms": "Räume"
+  },
+  "Hom": "Startseite",
+  "Home": {
+    "Hints": "Tipps"
+  },
+  "PlantInformation": {
+    "CareLevel": "Pflegestufe",
+    "Cycle": "Zyklus",
+    "GrowthRate": "Wachstumsrate",
+    "HardinessZone": "Winterhärtezone",
+    "Leaf": "Blätter",
+    "MoreInformation": "weiter Informationen",
+    "Sun": "Sonne",
+    "Use": "Benutzen",
+    "Watering": "Bewässerung"
+  },
+  "PlantList": {
+    "AddPlant": "Pflanze hinzufügen",
+    "Cancel": "Abbrechen",
+    "Delete": "Löschen",
+    "DeletePlantWarningDescription": "Dies Aktion kann nicht Rückgängig gemacht werden. Die Pflante und alle Sensordaten werden vom Server gelöscht.",
+    "DeletePlantWarningTitle": "Bist du dir sicher?",
+    "ErrorFilter": "Mindestens eine option muss ausgewählt sein.",
+    "Filter": "Filter",
+    "FilterBy": "Filtern nach",
+    "Group": "Wohnung",
+    "ID": "ID",
+    "LastCall": "Letzer Kontakt",
+    "Model": "Modell",
+    "Name": "Name",
+    "Plant": "Pflanze",
+    "Plants": "Pflanzen",
+    "PlantsDescription": "Verwalte deine Pflanzen",
+    "Room": "Raum",
+    "Sensor": "Sensor",
+    "Sensors": "Sensoren",
+    "SensorsDescription": "Verwalte deine Sensoren",
+    "Showing": "Zeigt",
+    "Status": "Status"
+  },
+  "PlantSearch": {
+    "Search": "Pflanze suchen",
+    "isSearching": "Suchen...",
+    "noResults": "Keine Pflanze gefunden",
+    "searchButton": "Suchen"
+  },
+  "Profile": {
+    "ProfilePicture": "Profilbild"
+  },
+  "SensorViewRow": {
+    "Actions": "Aktionen",
+    "Delete": "Löschen",
+    "Edit": "Bearbeiten"
+  },
+  "Settings": {
+    "Account": "Account",
+    "AccountDescription": "Name, Benutzername und Passwort",
+    "Appearance": "Aussehen",
+    "AppearanceDescription": "Wechsel das aussehen der App",
+    "Language": "Sprache",
+    "LanguageDescription": "Wechsel die Sprache der App"
+  },
+  "ShareLink": {
+    "Copied": "Kopiert",
+    "ErrorCopy": "Fehler beim Kopieren"
+  },
+  "SinglePlant": {
+    "EnterValidRoom": "Wähle bitte eine validen Raum aus"
+  },
   "about": {
     "description": "Wir sind ein Team von Studierenden, das an unserem Abschlussprojekt arbeitet, um ein smartes Bewässerungssystem zu entwickeln. Das Ziel ist es, die Pflanzenbewässerung für Haushalte zu automatisieren und zu optimieren, wodurch die Pflanzenpflege einfacher und effizienter wird.",
     "featuresList": [
@@ -36,6 +146,7 @@
     "technologiesTitle": "Verwendete Technologien",
     "title": "Über uns"
   },
+  "active": "Aktiv",
   "appearance": {
     "Dark": "Dunkel",
     "Description": "Passen Sie das Erscheinungsbild der App an.",
@@ -49,6 +160,8 @@
     "Title": "Erscheinungsbild",
     "UpdatePreferences": "Einstellungen aktualisieren"
   },
+  "brightness": "Helligkeit",
+  "error": "Fehler",
   "errors": {
     "E000": "Die Abfrage konnte nicht geparst werden.",
     "E100": "Autorisierungsheader erforderlich: Verwenden Sie 'Authorization: Bearer <token>'.",
@@ -88,7 +201,28 @@
       "title": "Bist du sicher?"
     },
     "create": {
-      "RoomEntity": "Küche"
+      "RoomEntity": "Küche",
+      "cancel": "Abbrechen",
+      "create": "Gruppe erstellen",
+      "description": "Erstell eine neue Gruppe um Pflanzen zusammen zuverwalten und zu erstellen",
+      "groupName": "Gruppenname",
+      "namePlaceholder": "WG Mannheim",
+      "roomName": "Räume",
+      "roomPlaceholder": "erstelle deine Räume",
+      "save": "Speichern",
+      "title": "Gruppe erstellen"
+    },
+    "createRoom": {
+      "Entity": "Raum",
+      "EntityPlaceholder": "Wohnzimmer",
+      "NewEntity": "Raum für eine Wohnung erstellen",
+      "NewEntityCancel": "Abbrechen",
+      "NewEntitySelectionGroup": "Gruppe",
+      "NewEntitySelectionGroupPlaceholder": "Auswählen",
+      "NewEntitySubtitle": "Erstelle einen Raum in deinen bestehenden Wohnungen für eine Pflanze",
+      "NewEntityTitle": "Raum hizufügen",
+      "NoEntity": "Kein Raum in einer Wohnung vorhanden",
+      "SelectPlaceholder": "Raum auswählen"
     },
     "created": "Gruppe erstellt",
     "deleted": "Gruppe erfolgreich gelöscht",
@@ -104,6 +238,12 @@
         "title": "Raum entfernen"
       }
     },
+    "update": {
+      "create": "Grupper erstellen",
+      "description": "Überarbeite deinen Gruppennamen und Räume",
+      "save": "Speicher",
+      "title": "Gruppe bearbeiten"
+    },
     "updated": "Gruppe aktualisiert",
     "userRemoved": "Benutzer wurde entfernt"
   },
@@ -113,6 +253,8 @@
     "subtitle": "Überblick über deine Räume",
     "welcome": "Hallo {name}!"
   },
+  "humidity": "",
+  "inactive": "Inaktiv",
   "language": {
     "English": "Englisch",
     "German": "Deutsch",
@@ -129,9 +271,11 @@
     "CreateAccount": "Konto erstellen",
     "DontHaveAccount": "Haben Sie noch kein Konto?",
     "Email": "E-Mail",
+    "Error": "Benutzername oder Passwort falsch",
     "FirstName": "Vorname",
     "ForgotPassword": "Passwort vergessen?",
     "LastName": "Nachname",
+    "Loading": "Anmelden...",
     "Or": "oder",
     "Password": "Passwort",
     "SignIn": "Anmelden",
@@ -143,38 +287,54 @@
     "Success": "Erfolgreich angemeldet!"
   },
   "plant": {
+    "NoInformationSubtitle": "In unserer Datenbank sind leider keine Daten zu der Pflanze enthalten.",
+    "NoInformationTitle": "Keine Daten verfügbar",
     "settings": {
       "Avatar": "Avatar",
       "Avatar1": "Avatar 1",
       "Avatar2": "Avatar 2",
+      "AvatarPlaceholder": "Wähle deine Pflanzenavatar aus",
       "Avatars": "Avatare",
       "Cancel": "Abbrechen",
       "Description": "Beschreibung",
-      "DescriptionPlaceholder": "Bitte gib alle relevanten Informationen ein",
+      "DescriptionPlaceholder": "Weiter private Notizen",
       "Group1": "Gruppe 1",
       "Group2": "Gruppe 2",
       "NameOfPlant": "Name der Pflanze",
       "NamePlaceholder": "Gib den Namen der Pflanze ein",
       "PlantType": "Pflanzentyp",
-      "PlantTypePlaceholder": "Gib den Pflanzentyp ein",
+      "PlantTypePlaceholder": "Gib den Pflanzenart ein (englisch)",
       "Room": "Raum",
       "Room1": "Raum 1",
       "Room2": "Raum 2",
       "Room3": "Raum 3",
       "Room4": "Raum 4",
       "SelectRoom": "Raum auswählen",
-      "SelectSensor": "Sensor auswählen",
+      "SelectSensor": "Sensor",
+      "SelectSensorPlaceholder": "Sensor auswählen",
       "Sensor1": "Sensor 1",
       "Sensor2": "Sensor 2",
       "Sensors": "Sensoren",
       "SubTitle": "Verwalte deine Pflanzeninformationen",
       "Submit": "Speichern",
-      "Title": "Pflanzeneinstellungen"
+      "Title": "Pflanzeneinstellungen",
+      "targetValues": "Soll-Werte"
     }
   },
   "plantList": {
     "emptyPlantSubtitle": "Erstell eine Pflanze damit du mit Sensora die Daten erfassen kannst.",
     "emptyPlantTitle": "Erstell deine erste Pflanze "
+  },
+  "profile": {
+    "AboutUs": "Über uns",
+    "AddDevice": "Gerät hinzufügen",
+    "ClearCache": "Cache löschen",
+    "FAQ": "FAQ",
+    "Group": "Gruppen",
+    "Logout": "Abmelden",
+    "Privacy": "Datenschutz",
+    "Sensora": "Sensora",
+    "Support": "Hilfe"
   },
   "register": {
     "MinLength": "Das Passwort muss mindestens 8 Zeichen lang sein.",
@@ -206,8 +366,11 @@
     "close": "Schließen",
     "copy": "Kopieren"
   },
+  "soilMoisture": "Bodenfeuchtigkeit",
+  "temperature": "Temperatur",
   "title": {
     "aboutUs": "Über uns",
+    "createPlant": "Pflanze erstellen",
     "groups": "Gruppen",
     "home": "Übersicht",
     "login": "Anmelden",
@@ -222,6 +385,12 @@
     "settings": "Einstellungen",
     "setupAccount": "Account vervollständigen",
     "uploadPlant": "Pflanze erkennen"
+  },
+  "unknown": "Unbekannt",
+  "upload": {
+    "capture": "Aufnehmen",
+    "search": "Suchen",
+    "upload": "Hochladen"
   },
   "user": {
     "deleted": "Benutzer erfolgreich gelöscht!",
