--- a/frontend/src/i18n/locales/de-DE.json
+++ b/frontend/src/i18n/locales/de-DE.json
@@ -148,6 +148,15 @@
     "technologiesTitle": "Verwendete Technologien",
     "title": "Über uns"
   },
+  "account": {
+    "AccountCreated": "Dein Konto wurde erfolgreich erstellt!",
+    "CreateHome": "Erstell dein Zuhause",
+    "CreateHomeDescription": "Erstell dein Zuhause und gib Freunden zugriff.",
+    "Login": "Anmeldung",
+    "LoginDescription": "Gib deine E-Mail und Password ein um fort zu fahren.",
+    "forename": "Vorname",
+    "surname": "Nachname"
+  },
   "active": "Aktiv",
   "appearance": {
     "Dark": "Dunkel",
@@ -293,7 +302,8 @@
     "SignUp": "Registrieren",
     "SignUpInfo": "Geben Sie Ihre Daten ein, um ein Konto zu erstellen",
     "SignUpWithA": "Registrieren Sie sich mit A",
-    "Success": "Erfolgreich angemeldet!"
+    "Success": "Erfolgreich angemeldet!",
+    "username": "Benutzername"
   },
   "plant": {
     "NoInformationSubtitle": "In unserer Datenbank sind leider keine Daten zu der Pflanze enthalten.",
@@ -346,12 +356,23 @@
     "Support": "Hilfe"
   },
   "register": {
+    "Continue": "weiter",
     "MinLength": "Das Passwort muss mindestens 8 Zeichen lang sein.",
-    "SpecialCharRequired": "Das Passwort muss mindestens ein Sonderzeichen enthalten (!\"#$%&'()*+,-./:;<=>?[]^_{}|~)."
+    "SpecialCharRequired": "Das Passwort muss mindestens ein Sonderzeichen enthalten (!\"#$%&'()*+,-./:;<=>?[]^_{}|~).",
+    "UppercaseRequired": "Das Passwort muss mindestens einen Großbuchstaben enthalten"
   },
   "sensorList": {
     "emptySensorSubtitle": "Füg einen Sensor über dein Profil hinzu um ihn zu benutzen.",
     "emptySensorTitle": "Füg deinen ersten Sensor hinzu"
+  },
+  "settings": {
+    "back": "Zurück zu den Einstellungen",
+    "views": {
+      "ACCOUNT": "Accounteinstellungen",
+      "APPEARANCE": "Aussehen",
+      "LANGUAGE": "Spracheinstellungen",
+      "MAIN": "Einstellungen"
+    }
   },
   "setupAccountStepper": {
     "1": {
@@ -376,6 +397,9 @@
     "copy": "Kopieren"
   },
   "soilMoisture": "Bodenfeuchtigkeit",
+  "success": {
+    "requestCompleted": "Erfolgreich geladen."
+  },
   "temperature": "Temperatur",
   "title": {
     "aboutUs": "Über uns",
