--- a/frontend/src/i18n/locales/de-DE.json
+++ b/frontend/src/i18n/locales/de-DE.json
@@ -67,6 +67,7 @@
     "DeletePlantWarningDescription": "Dies Aktion kann nicht Rückgängig gemacht werden. Die Pflante und alle Sensordaten werden vom Server gelöscht.",
     "DeletePlantWarningTitle": "Bist du dir sicher?",
     "ErrorFilter": "Mindestens eine option muss ausgewählt sein.",
+    "Ext": "(ext)",
     "Filter": "Filter",
     "FilterBy": "Filtern nach",
     "Group": "Wohnung",
@@ -110,7 +111,8 @@
   },
   "ShareLink": {
     "Copied": "Kopiert",
-    "ErrorCopy": "Fehler beim Kopieren"
+    "ErrorCopy": "Fehler beim Kopieren",
+    "Generate": "Generieren"
   },
   "SinglePlant": {
     "EnterValidRoom": "Wähle bitte eine validen Raum aus"
@@ -166,8 +168,8 @@
     "SetToOS": "Erscheinungsbild auf Betriebssystem-Voreinstellung gesetzt",
     "SwitchToDarkMode": "Erscheinungsbild auf Dunkelmodus umgeschaltet",
     "SwitchToLightMode": "Erscheinungsbild auf Hellmodus umgeschaltet",
-    "ThemeDescription": "Wählen Sie das Thema für die App.",
-    "ThemeLabel": "Thema",
+    "ThemeDescription": "Wähle das Aussehen für die App.",
+    "ThemeLabel": "Aussehen",
     "Title": "Erscheinungsbild",
     "UpdatePreferences": "Einstellungen aktualisieren"
   },
@@ -305,6 +307,9 @@
     "Success": "Erfolgreich angemeldet!",
     "username": "Benutzername"
   },
+  "photo": {
+    "uploadImages": "Fotos hochladen"
+  },
   "plant": {
     "NoInformationSubtitle": "In unserer Datenbank sind leider keine Daten zu der Pflanze enthalten.",
     "NoInformationTitle": "Keine Daten verfügbar",
@@ -356,10 +361,14 @@
     "Support": "Hilfe"
   },
   "register": {
-    "Continue": "weiter",
+    "Continue": "Speichern",
     "MinLength": "Das Passwort muss mindestens 8 Zeichen lang sein.",
     "SpecialCharRequired": "Das Passwort muss mindestens ein Sonderzeichen enthalten (!\"#$%&'()*+,-./:;<=>?[]^_{}|~).",
-    "UppercaseRequired": "Das Passwort muss mindestens einen Großbuchstaben enthalten"
+    "UppercaseRequired": "Das Passwort muss mindestens einen Großbuchstaben enthalten",
+    "profilePicture": {
+      "Description": "Wähl dein Avatar aus.",
+      "Title": "Benutzerinformationen"
+    }
   },
   "sensorList": {
     "emptySensorSubtitle": "Füg einen Sensor über dein Profil hinzu um ihn zu benutzen.",
@@ -403,6 +412,7 @@
   "temperature": "Temperatur",
   "title": {
     "aboutUs": "Über uns",
+    "addDevice": "Gerät hinzufügen",
     "createPlant": "Pflanze erstellen",
     "groups": "Wohnungen",
     "home": "Übersicht",
@@ -428,5 +438,27 @@
   "user": {
     "deleted": "Benutzer erfolgreich gelöscht!",
     "updated": "Benutzer erfolgreich aktualisiert!"
+  },
+  "addController": {
+    "title": "Neuen Controller hinzufügen",
+    "description": "Folge diesen Schritten, um einen neuen Controller zu deinem Konto hinzuzufügen.",
+    "important": "Wichtig:",
+    "step1Title": "Schritt 1: Stromversorgung",
+    "step1Description": "Verbinde den neuen Controller mit einer Stromquelle. Stelle sicher, dass er eingeschaltet ist.",
+    "step2Title": "Schritt 2: Mit WLAN verbinden",
+    "step2Description": "Auf deinem Gerät (Smartphone, Tablet, Laptop) öffne die WLAN-Einstellungen und suche nach einem Netzwerk mit dem Namen:",
+    "wifiName": "Sensora",
+    "wifiPassword": "Für dieses WLAN ist kein Passwort erforderlich. Wähle es einfach aus, um dich zu verbinden.",
+    "confirmWifi": "Ich bin mit dem \"Sensora\" WLAN verbunden",
+    "wifiConnected": "Mit \"Sensora\" WLAN verbunden",
+    "step3Title": "Schritt 3: Webserver öffnen",
+    "step3Description": "Sobald du mit dem \"Sensora\" WLAN verbunden bist, öffne einen Webbrowser (z.B. Chrome, Safari, Firefox) und gib die folgende Adresse in die Adressleiste ein:",
+    "step3Hint": "Dies öffnet die Konfigurationsseite des Controllers.",
+    "openConfig": "Konfigurationsseite öffnen (192.168.0.1)",
+    "step4Title": "Schritt 4: WLAN-Daten eingeben",
+    "step4Description": "Auf der Konfigurationsseite des Controllers wirst du aufgefordert, die WLAN-Daten deines Heimnetzwerks (SSID und Passwort) sowie deinen Benutzerkonto-Namen für diese App einzugeben. Stelle sicher, dass du alle Informationen korrekt eingibst.",
+    "step5Title": "Schritt 5: Controller in der App überprüfen",
+    "step5Description": "Nachdem du die WLAN-Daten und deinen Benutzernamen eingegeben hast, versucht der Controller, eine Verbindung zu unserem Server herzustellen. Sobald die Verbindung hergestellt ist, solltest du den neuen Controller in deiner App sehen. Möglicherweise musst du die Pflanzenübersicht einmal aktualisieren.",
+    "refreshPlants": "Pflanzenübersicht aktualisieren"
   }
 }
