--- a/frontend/src/i18n/locales/de-DE.json
+++ b/frontend/src/i18n/locales/de-DE.json
@@ -452,13 +452,25 @@
     "confirmWifi": "Ich bin mit dem \"Sensora\" WLAN verbunden",
     "wifiConnected": "Mit \"Sensora\" WLAN verbunden",
     "step3Title": "Schritt 3: Webserver öffnen",
-    "step3Description": "Sobald du mit dem \"Sensora\" WLAN verbunden bist, öffne einen Webbrowser (z.B. Chrome, Safari, Firefox) und gib die folgende Adresse in die Adressleiste ein:",
-    "step3Hint": "Dies öffnet die Konfigurationsseite des Controllers.",
     "openConfig": "Konfigurationsseite öffnen (192.168.0.1)",
-    "step4Title": "Schritt 4: WLAN-Daten eingeben",
-    "step4Description": "Auf der Konfigurationsseite des Controllers wirst du aufgefordert, die WLAN-Daten deines Heimnetzwerks (SSID und Passwort) sowie deinen Benutzerkonto-Namen für diese App einzugeben. Stelle sicher, dass du alle Informationen korrekt eingibst.",
+    "step3TitleForm": "Schritt 3: WLAN-Daten und Benutzername eingeben",
+    "step3DescriptionForm": "Gib hier die WLAN-Daten deines Heimnetzwerks und deinen Benutzerkonto-Namen ein.",
+    "ssidLabel": "WLAN-Name (SSID)",
+    "ssidPlaceholder": "Name deines WLANs",
+    "wifiPasswordLabel": "WLAN-Passwort",
+    "wifiPasswordPlaceholder": "Passwort deines WLANs",
+    "usernameLabel": "Benutzername",
+    "usernamePlaceholder": "Dein App-Benutzername",
+    "submitConfig": "Konfiguration senden",
+    "submitting": "Senden...",
+    "configSuccess": "Konfiguration erfolgreich gesendet!",
+    "configError": "Fehler beim Senden der Konfiguration",
+    "configErrorGeneric": "Ein unbekannter Fehler ist aufgetreten.",
+    "configErrorConnection": "Verbindungsfehler zum Controller.",
+    "step4SuccessTitle": "Schritt 4: Verbindung wird hergestellt",
+    "step4SuccessDescription": "Der Controller versucht nun, sich mit deinem WLAN und unserem Server zu verbinden. Dies kann einige Momente dauern.",
     "step5Title": "Schritt 5: Controller in der App überprüfen",
-    "step5Description": "Nachdem du die WLAN-Daten und deinen Benutzernamen eingegeben hast, versucht der Controller, eine Verbindung zu unserem Server herzustellen. Sobald die Verbindung hergestellt ist, solltest du den neuen Controller in deiner App sehen. Möglicherweise musst du die Pflanzenübersicht einmal aktualisieren.",
+    "step5Description": "Sobald die Verbindung hergestellt ist, solltest du den neuen Controller in deiner App sehen. Möglicherweise musst du die Pflanzenübersicht einmal aktualisieren.",
     "refreshPlants": "Pflanzenübersicht aktualisieren"
   }
 }
