--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -452,13 +452,25 @@
     "confirmWifi": "I am connected to the \"Sensora\" Wi-Fi",
     "wifiConnected": "Connected to \"Sensora\" Wi-Fi",
     "step3Title": "Step 3: Open Web Server",
-    "step3Description": "Once you are connected to the \"Sensora\" Wi-Fi, open a web browser (e.g., Chrome, Safari, Firefox) and enter the following address in the address bar:",
-    "step3Hint": "This will open the controller's configuration page.",
+    "step3TitleForm": "Step 3: Enter Wi-Fi Details and Username",
+    "step3DescriptionForm": "Enter your home network's Wi-Fi details and your user account name here.",
+    "ssidLabel": "Wi-Fi Name (SSID)",
     "openConfig": "Open Configuration Page (192.168.0.1)",
-    "step4Title": "Step 4: Enter Wi-Fi Details",
-    "step4Description": "On the controller's configuration page, you will be asked to enter your home network's Wi-Fi details (SSID and password) as well as your user account name for this app. Make sure you enter all the information correctly.",
+    "ssidPlaceholder": "Your Wi-Fi network name",
+    "wifiPasswordLabel": "Wi-Fi Password",
+    "wifiPasswordPlaceholder": "Your Wi-Fi password",
+    "usernameLabel": "Username",
+    "usernamePlaceholder": "Your app username",
+    "submitConfig": "Submit Configuration",
+    "submitting": "Submitting...",
+    "configSuccess": "Configuration sent successfully!",
+    "configError": "Error sending configuration",
+    "configErrorGeneric": "An unknown error occurred.",
+    "configErrorConnection": "Connection error to the controller.",
+    "step4SuccessTitle": "Step 4: Connecting...",
+    "step4SuccessDescription": "The controller is now trying to connect to your Wi-Fi and our server. This may take a few moments.",
     "step5Title": "Step 5: Verify Controller in App",
-    "step5Description": "After entering the Wi-Fi details and your username, the controller will attempt to connect to our server. Once the connection is established, you should see the new controller in your app. You may need to refresh the plants overview once.",
+    "step5Description": "Once the connection is established, you should see the new controller in your app. You may need to refresh the plants overview once.",
     "refreshPlants": "Refresh Plants Overview"
   }
 }
